--- a/css/lab5style.css
+++ b/css/lab5style.css
@@ -1,26 +1,303 @@
+/* .lato-regular {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .lato-bold {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  } */
+
+*
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+
+/* color:
+#13124f
+#1b1b6c
+#352ba5
+#f61067
+#2ad392
+#9090a5 */
+
 header{
-    position: fixed;
     right: 0;
     left: 0;
     width: 100%;
     display: flex;
+    background-color: #1b1b6c;
 }
 .headp{
     padding: 5px;
-    margin: 0;
+    margin: 10px;
     color: white;
+    font-family: 'Lato', sans-serif;
 }
 
 body{
-    background-color: #1B1B6C;
+    background-color: white;
+    width: 100%;
+    height: 100%;
 }
 
-text{
+.firstslide {
+    background-color: #13124f; 
+    width: 100%;
+    height: 300px;
+    margin: 0;
+}
+
+.title1 {
+    font-size: 4em; 
+    color: #ffffff; 
+    font-family: 'Lato', sans-serif;
+    padding-top: 80px;
+    padding-left: 40px;
+}
+.para1 {
+    font-size: 1em; 
+    color: #ffffff; 
+    font-family: 'Lato', sans-serif;
+    padding-top: 8px;
+    padding-left: 40px;
+}
+
+.button1 {
+    /* font-size: 1em;  */
+    display: inline-block;
+    background-color:#f61067;
+    color: #fff;
+    border:none; 
+    border-radius:10px; 
+    padding:5px;
+    margin-left: 40px;
+    margin-top: 15px;
+    min-height:35px; 
+    min-width: 120px;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none; 
+}
+
+.maincontainer {
+    display: flex;
+    justify-content: space-between;
+    /* gap: 20px; */
+    padding: 25px;
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+}
+
+.leftcontent{
+    width: 55%;
+    margin-right: 35px;
+    padding-top: 55px;
+    padding-left: 45px;
+    box-sizing: border-box;
+}
+
+.para2{
+    /* margin: 0; */
+    margin-top: 40px;
+    margin-right: 35px;
+    
+}
+
+.videocontent{
+    /* width: 100%; */
+    margin: 0;
+    padding-top: 35px;
+    margin-right: 35px;
+}
+
+.video1{
+    width: 100%;
+    height: 450px;
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    margin-right: 35px;
+    display: block;    
+}
+
+.alert {
+    display: flex;
+    align-items: center;
+    background-color: #9090a5;
+    color: #ffffff; 
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-family: Lato, sans-serif;
+}
+.alert-icon {
+    font-size: 1em;
+    margin-right: 5px;
+    margin-left: 5px;
+    padding: 7px;
+}
+
+.alert-message {
+    font-size: 1em;
+}
+
+
+.rightcontent{
+    width: 45%;
+    margin: 0;
+    box-sizing: border-box;
+    padding-top: 55px;
+    /* background-color: #f4f4f4; */
+    /* padding: 20px; */
+    border-radius: 8px;
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+}
+
+.messages {
+    background-color: #ff4081;
     color: white;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-.container{
-    display: grid;
-    gap: 50px;
-    grid-template-columns: repeat(auto-fit), minmax(600px, 1fr);
+.messages-title {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.badge {
+    background-color: #1b1b6c;
+    color: white;
+    padding: 2px 8px;
+    border-radius: 50%;
+    font-weight: bold;
+}
+
+.welcome {
+    background-color: #13124f;
+    border-radius: 5px;
+    height: auto;
+    
+}
+
+.welcome-title {
+    background-color: #9090a5;
+    color: white;
+    font-weight: bold;
+    height: 55px;
+    padding: 20px;
+}
+
+.welcome-text {
+    font-size: 0.9em;
+    color: white;
+    padding: 20px;
+    background-color: #13124f;
+}
+
+.welcome-input {
+    width: 90%;
+    padding: 8px;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: 1px solid #ccc;
+    background-color: #1b1b96;
+    border-radius: 4px;
+}
+
+.send-btn {
+    background-color: #ff4081;
+    color: white;
+    margin: 10px 20px 20px 20px;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 90%;
+}
+.bottom {
+    background-color: #1b1b96;
+    color: white;
+    font-weight: bold;
+    height: 35px;
+    padding: 10px;
+    text-align: center;
+}
+
+.vote {
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+    border: solid 1px #ccc;
+    border-radius: 5px;
+}
+
+.vote-title {
+    color: #333;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.vote-text {
+    font-size: 0.9em;
+    color: #555;
+    margin-bottom: 15px;
+}
+
+.percent{
+
+    background-color: #2ad392;
+    width: 100%;
+    height: 6px;
+    display: block;
+    margin: 5px;
+    overflow: hidden;
+}
+.percent div
+{
+    position: relative;
+    height: 100%;
+    background: #ff4081;
+    width: 75%;
+}
+
+.vote-btn {
+    padding: 10px 15px;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 5px;
+    width: 45%;
+}
+
+.vote-btn.lame {
+    background-color: #ffffff;
+    color: #2ad392;
+    border-color: #2ad392;
+}
+
+.vote-btn.cool {
+    background-color: #f61067;
+    color: white;
+    border-color: #f61067;
+}
+
+
+footer{
+    width: 100%;
+    height: 50px;
+    background-color: #13124f;
+    padding: 15px;
+    color: #fff;
 }
