--- a/css/lab5cssdemo.css
+++ b/css/lab5cssdemo.css
@@ -3,162 +3,167 @@
     font-weight: 400;
     font-style: normal;
   }
-  
+
   .lato-bold {
     font-family: "Lato", sans-serif;
     font-weight: 700;
     font-style: normal;
   } */
 
-  *
-  * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Lato', sans-serif;
-  }
-  
-  /* color:
+    /* color:
   #13124f
   #1b1b6c
   #352ba5
   #f61067
   #2ad392
   #9090a5 */
-  
-  header{
+
+* {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Lato', sans-serif;
+ }
+
+
+header{
       right: 0;
       left: 0;
       width: 100%;
       display: flex;
       background-color: #1b1b6c;
   }
-  .headp{
+.headp{
       padding: 5px;
       margin: 10px;
       color: white;
       font-family: 'Lato', sans-serif;
   }
-  
-  body{
+
+body{
       background-color: white;
       width: 100%;
       height: 100%;
   }
-  
-  .firstslide {
-      background-color: #13124f; 
+
+.firstslide {
+      background-color: #13124f;
       width: 100%;
-      height: 300px;
+      min-height: 350px;
       margin: 0;
   }
-  
-  .title1 {
-      font-size: 4em; 
-      color: #ffffff; 
+
+.title1 {
+      font-size: 4em;
+      color: #ffffff;
       font-family: 'Lato', sans-serif;
-      padding-top: 80px;
-      padding-left: 40px;
-  }
-  .para1 {
-      font-size: 1em; 
-      color: #ffffff; 
+      padding: 80px 0 5px 40px;
+}
+.para1 {
+      font-size: 1em;
+      color: #ffffff;
       font-family: 'Lato', sans-serif;
-      padding-top: 8px;
-      padding-left: 40px;
+      padding: 0 0 0 40px;
   }
-  
+
   .button1 {
-      /* font-size: 1em;  */
+      font-size: 1rem;
       display: inline-block;
       background-color:#f61067;
       color: #fff;
-      border:none; 
-      border-radius:10px; 
-      padding:5px;
-      margin-left: 40px;
-      margin-top: 15px;
-      min-height:35px; 
-      min-width: 120px;
+      border:none;
+      border-radius:10px;
+      padding: 10px 24px;
+      margin: 30px 0 0 40px;
+      max-height:45px;
+      min-width: 150px;
       box-sizing: border-box;
       text-align: center;
-      text-decoration: none; 
+      text-decoration: none;
+      white-space: nowrap;
+      vertical-align: middle;
   }
-  
+
   .maincontainer {
       display: flex;
       justify-content: space-between;
-      /* gap: 20px; */
+      gap: 20px;
       padding: 25px;
       width: 100%;
-      height: 100vh;
       box-sizing: border-box;
   }
-  
+
   .leftcontent{
-      width: 55%;
-      margin-right: 35px;
-      padding-top: 55px;
-      padding-left: 45px;
+      width: 50%;
+      margin: 40px 35px 20px 45px;
+      padding: 40px 35px 20px 45px;
       box-sizing: border-box;
   }
-  
+
+  .title2{
+    /* margin: 40px 35px 20px 45px; */
+    padding: 40px 0 20px 10px;
+  }
+
+  .solid{
+    border-bottom: 1px solid #888;
+    margin-left: 10px;
+    margin-right: 40px;
+  }
+
   .para2{
-      /* margin: 0; */
-      margin-top: 40px;
-      margin-right: 35px;
-      
+    padding: 20px 0 20px 10px;
+    margin-right: 40px;
   }
-  
+
   .videocontent{
-      /* width: 100%; */
-      margin: 0;
-      padding-top: 35px;
-      margin-right: 35px;
+    /* padding: 40px 0 20px 10px; */
+
   }
-  
+
   .video1{
       width: 100%;
       height: 450px;
-      border-radius: 10px; 
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      margin-right: 35px;
-      display: block;    
+      border: none;
+      /*border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+      display: block;
+      padding: 10px 40px 20px 10px;
   }
-  
+
   .alert {
-      display: flex;
+      /* display: flex; */
       align-items: center;
       background-color: #9090a5;
-      color: #ffffff; 
-      padding: 5px;
+      color: #ffffff;
+      margin: 10px 40px 20px 10px;
+      padding: 10px;
       border-radius: 5px;
-      margin-top: 20px;
-      font-family: Lato, sans-serif;
   }
   .alert-icon {
       font-size: 1em;
-      margin-right: 5px;
+      padding: 10px 0 10px 10px;
+      /* margin-right: 5px;
       margin-left: 5px;
-      padding: 7px;
+      padding: 7px; */
   }
-  
+
   .alert-message {
       font-size: 1em;
+      font-family: Lato, sans-serif;
+      margin-left: 10px;
   }
-  
-  
+
+
   .rightcontent{
       width: 45%;
       margin: 0;
       box-sizing: border-box;
       padding-top: 55px;
-      /* background-color: #f4f4f4; */
-      /* padding: 20px; */
+      padding: 2px;
       border-radius: 8px;
-      /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   }
-  
+
   .messages {
       background-color: #ff4081;
       color: white;
@@ -167,12 +172,12 @@
       text-align: center;
       margin-bottom: 20px;
   }
-  
+
   .messages-title {
       font-size: 1.2em;
       font-weight: bold;
   }
-  
+
   .badge {
       background-color: #1b1b6c;
       color: white;
@@ -180,14 +185,14 @@
       border-radius: 50%;
       font-weight: bold;
   }
-  
+
   .welcome {
       background-color: #13124f;
       border-radius: 5px;
       height: auto;
-      
+
   }
-  
+
   .welcome-title {
       background-color: #9090a5;
       color: white;
@@ -195,14 +200,14 @@
       height: 55px;
       padding: 20px;
   }
-  
+
   .welcome-text {
       font-size: 0.9em;
       color: white;
       padding: 20px;
       background-color: #13124f;
   }
-  
+
   .welcome-input {
       width: 90%;
       padding: 8px;
@@ -213,7 +218,7 @@
       background-color: #1b1b96;
       border-radius: 4px;
   }
-  
+
   .send-btn {
       background-color: #ff4081;
       color: white;
@@ -233,7 +238,11 @@
       padding: 10px;
       text-align: center;
   }
-  
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
   .vote {
       background-color: white;
       padding: 20px;
@@ -241,36 +250,29 @@
       border: solid 1px #ccc;
       border-radius: 5px;
   }
-  
+
   .vote-title {
       color: #333;
       font-weight: bold;
       margin-bottom: 10px;
-  }
-  
-  .vote-text {
       font-size: 0.9em;
-      color: #555;
-      margin-bottom: 15px;
+  }
+
+  .percent {
+    background-color: #2ad392;
+    width: 380px; /* Adjust the width as needed */
+    height: 6px;
+    display: block;
+    margin: 20px 20px 20px 5px;
   }
   
-  .percent{
-  
-      background-color: #2ad392;
-      width: 100%;
-      height: 6px;
-      display: block;
-      margin: 5px;
-      overflow: hidden;
+  .percent div {
+    position: relative;
+    height: 100%;
+    background: #ff4081;
+    width: 5%;
   }
-  .percent div
-  {
-      position: relative;
-      height: 100%;
-      background: #ff4081;
-      width: 75%;
-  }
-  
+
   .vote-btn {
       padding: 10px 15px;
       border: 2px solid transparent;
@@ -280,24 +282,103 @@
       margin: 5px;
       width: 45%;
   }
-  
+
   .vote-btn.lame {
       background-color: #ffffff;
       color: #2ad392;
       border-color: #2ad392;
   }
-  
+
   .vote-btn.cool {
       background-color: #f61067;
       color: white;
       border-color: #f61067;
   }
-  
-  
+
+
   footer{
-      width: 100%;
-      height: 50px;
-      background-color: #13124f;
-      padding: 15px;
-      color: #fff;
-  }
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    background-color: #13124f;
+    padding: 15px;
+    color: #fff;
+}
+
+/*  utas 320px - 480px*/
+@media (max-width: 480px) {
+    body {
+        font-size: 0.8rem;
+    }
+
+    .firstslide {
+        background-color: #13124f;
+        width: 100%;
+        min-height: 100px;
+        padding: 50px 0 40px 40px;
+        color: white;
+    }
+    .title1 {
+        font-size: 1.5em;
+    }
+    .button1 {
+        min-width: 80px;
+        padding: 8px;
+    }
+}
+
+/* tablets, iPads 481px - 768px) */
+@media (min-width: 481px) and (max-width: 768px) {
+    body {
+        font-size: 0.9rem;
+    }
+    .title1 {
+        font-size: 2em;
+    }
+    .button1 {
+        min-width: 100px;
+        padding: 10px;
+    }
+}
+
+/* laptops, 769px - 1024px) */
+@media (min-width: 769px) and (max-width: 1024px) {
+    body {
+        font-size: 1rem;
+    }
+    .title1 {
+        font-size: 2.5em;
+    }
+    .button1 {
+        min-width: 120px;
+        padding: 12px;
+    }
+}
+
+/* desktops, 1025px - 1200px) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+    body {
+        font-size: 1.1rem;
+    }
+    .title1 {
+        font-size: 3em;
+    }
+    .button1 {
+        min-width: 140px;
+        padding: 15px;
+    }
+}
+
+/* TVs, 1201px - +) */
+@media (min-width: 1201px) {
+    body {
+        font-size: 1.2rem;
+    }
+    .title1 {
+        font-size: 3.5em;
+    }
+    .button1 {
+        min-width: 160px;
+        padding: 20px;
+    }
+}
