--- a/css/lab9style.css
+++ b/css/lab9style.css
@@ -1,26 +1,188 @@
-/* style.css */
+/* --pr: #80aaff;
+--blue: #3478ff; */
+
+
+*{
+    padding: 0;
+    margin: 0;
+    box-shadow: border-box;
+}
 body {
     font-family: Arial, sans-serif;
+    font-size: 2rem;
+    line-height: 1.5;
+    letter-spacing: -1px;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     min-height: 100vh;
-    background: #f0f8ff;
+    background: #80aaff;
+    color: #fff;
+    width: 100%;
+    height: 100vh;
 }
 
-.game-container {
+.main-container {
     text-align: center;
     padding: 20px;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 90%;
+    width: 80%;
     max-width: 600px;
+    margin: 0 auto;
+    position: absolute;
 }
 
-#hangman-drawing {
+h1{
+    font-size: 48px;
+    font-weight: 100;
+}
+
+.rules{
+    margin-top: 30px;
+}
+
+.useg{
+    
+    margin: 25px auto 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    button{
+        width: 40px;
+        height: 40px;
+        border-radius: 5px;
+        background-color: #fff;
+        color: #3478ff;
+        font-size: 20px;
+
+        &[:disabled]{
+            cursor: :default;
+            opacity: 0.3;
+        }
+        &[:not(:disabled)]:hover{
+            background-color: #3478ff;
+            color: #fff;
+        }
+    }
+}
+
+.sedew{
+    margin-top: 30px;
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.ug{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: 20px;
+    font-size: 60px;
+    line-height: 1;
+
+    span{
+        display: inline-block;
+        width: 39px;
+    }
+}
+
+.ami{
+    margin-top: 35px;
+}
+
+.bttn{
+    width: 80px;
+    display: inline-block;
+    padding: 8px 0 10px;
+    border-radius: 5px;
+    border: 1px solid #fff;
+    color: #fff;
+    letter-spacing: -0.5px;
+
+    &:hover {
+        background-color: #fff;
+        color: #80aaff;
+    }
+}
+
+.game-container{
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 9;
+
+    &:active{
+        display: block;
+    }
+}
+.hangman{
+    display: none;
+    max-width: 300px;
+    padding: 50px 40px 40px;
+    border-radius: 20px;
+    background-color: var(--blue);
+    box-shadow: 0 0 10px rgba(0, 52, 157, 0.7);
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+  
+    &.active {
+      display: block;
+    }
+
+    .answer{
+        letter-spacing: 0;
+    }
+
+    .modal-close{
+        width: 20px;
+        height: 20px;
+        font-size: 0;
+        position: absolute;
+        top: 16px;
+        right: 16px;
+
+        &::before,
+        &::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 2px;
+        background-color: #fff;
+        position: absolute;
+        }
+
+        &::before {
+        left: 0;
+        top: 7px;
+        transform: rotate(45deg);
+        }
+
+        &::after {
+        right: 0;
+        top: 7px;
+        transform: rotate(-45deg);
+        }
+    }
+}
+
+{
+/* #hangman-drawing {
     height: 150px;
     margin-bottom: 20px;
     border: 2px solid #ccc;
@@ -64,4 +226,5 @@ body {
     #keyboard {
         grid-template-columns: repeat(6, 1fr);
     }
+} */
 }
