--- a/css/lab9style.css
+++ b/css/lab9style.css
@@ -22,7 +22,6 @@
     box-shadow: 0 1.2em 2.4em rgba(111, 85, 0, 0.25);
   }
   
-  /* Options Section */
   .options {
     display: flex;
     flex-direction: column;
@@ -95,7 +94,6 @@
     max-width: 80%;
   }
   
-  /* Lives Section */
   .lives-container {
     display: flex;
     justify-content: center;
@@ -107,8 +105,6 @@
     font-weight: bold;
     color: #000000;
   }
-  
-  /* Letters Section */
   .letters {
     display: flex;
     flex-wrap: wrap;
@@ -127,8 +123,6 @@
     text-transform: uppercase;
     cursor: pointer;
   }
-  
-  /* User Input Section */
   .user-input {
     display: flex;
     justify-content: center;
@@ -143,7 +137,7 @@
     border: 1px solid #000000;
   }
   
-  /* New Game Popup */
+  /* Popup */
   .new-game {
     background-color: #ffffff;
     position: absolute;
@@ -172,7 +166,7 @@
     margin: 0 0.1em;
     text-align: center;
     line-height: 1.2em;
-    border-bottom: none; /* No underline for spaces */
+    border-bottom: none;
   }
   
   
